fixed scrollbars

--- a/src/App.css
+++ b/src/App.css
@@ -39,19 +39,18 @@ input::-webkit-calendar-picker-indicator {
 
 /* Firefox */
 * {
-    scrollbar-width: 1px;
-    scrollbar-color: #397524 #DFE9EB;
+    scrollbar-width: 3.5px;
+    scrollbar-color: #443bff #DFE9EB;
 }
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
-    width: 1px;
-    width: 1px;
+    width: 3.5px;
 }
 
 *::-webkit-scrollbar-track {
-    border-radius: 5px;
-    background-color: #DFE9EB;
+    border-radius: 20px;
+    background-color: #dfe9eb3e;
 }
 
 *::-webkit-scrollbar-track:hover {
@@ -63,16 +62,16 @@ input::-webkit-calendar-picker-indicator {
 }
 
 *::-webkit-scrollbar-thumb {
-    border-radius: 5px;
-    background-color: #397524;
+    border-radius: 20px;
+    background-color: #443bff;
 }
 
 *::-webkit-scrollbar-thumb:hover {
-    background-color: #62A34B;
+    background-color: #443bff;
 }
 
 *::-webkit-scrollbar-thumb:active {
-    background-color: #62A34B;
+    background-color: #443bff;
 }
 
 input::-webkit-outer-spin-button,
@@ -86,7 +85,7 @@ input::-webkit-inner-spin-button {
 
     * {
         scrollbar-width: 0px;
-        scrollbar-color: #397524 #DFE9EB;
+        scrollbar-color: #443bff #DFE9EB;
     }
 
     /* Chrome, Edge and Safari */
